apollo-router/src/configuration/snapshots/uhg_custom_appollo_roouter__configuration__metrics__test__metrics@entities.router.yaml.snap
---
source: apollo-router/src/configuration/metrics.rs
assertion_line: 555
expression: "& metrics.non_zero()"
---
- name: apollo.router.config.entity_cache
  data:
    datapoints:
      - value: 1
        attributes:
          opt.enabled: true
          opt.subgraph.enabled: true
          opt.subgraph.invalidation.enabled: true
          opt.subgraph.ttl: true
