apollo-router/src/configuration/snapshots/uhg_custom_appollo_roouter__configuration__metrics__test__metrics@file_uploads.router.yaml.snap
---
source: apollo-router/src/configuration/metrics.rs
assertion_line: 555
expression: "& metrics.non_zero()"
---
- name: apollo.router.config.file_uploads.multipart
  data:
    datapoints:
      - value: 1
        attributes:
          opt.limits.max_file_size: 1mb
          opt.limits.max_files: 10
