apollo-router/src/configuration/snapshots/uhg_custom_appollo_roouter__configuration__metrics__test__metrics@persisted_queries.router.yaml.snap
---
source: apollo-router/src/configuration/metrics.rs
assertion_line: 555
expression: "& metrics.non_zero()"
---
- name: apollo.router.config.persisted_queries
  data:
    datapoints:
      - value: 1
        attributes:
          opt.log_unknown: true
          opt.safelist.enabled: true
          opt.safelist.require_id: true
